--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MapsActivity"
-    android:id="@+id/maps_activity"
-    android:orientation="vertical">
+    android:id="@+id/dl"
+    tools:context=".MapsActivity">
 
-    <include layout="@layout/map_content" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MapsActivity"
+        android:id="@+id/maps_activity"
+        android:orientation="vertical">
 
-    <!-- Adding bottom sheet after main content -->
-    <include layout="@layout/bottom_sheet_search" />
+        <include layout="@layout/map_content" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <!-- Adding bottom sheet after main content -->
+        <include layout="@layout/bottom_sheet_search" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width ="wrap_content"
+        android:layout_height = "match_parent"
+        android:id = "@+id/nav_view"
+        android:layout_gravity ="start"
+        app:headerLayout = "@layout/navigation_header"
+        app:menu="@menu/navigation_menu">
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
