--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
     android:rowCount="10"
+    android:layout_margin="20dp"
     android:columnCount="1">
 
     <TextView
         android:id="@+id/tv_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30sp"
         android:text="@string/Settings" />
 
     <CheckBox
@@ -30,15 +32,26 @@
         android:columnCount="2"
         android:layout_marginTop="20dp">
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edit_max_radius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="number" />
         <TextView
             android:id="@+id/tv_radius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/alert_in_km" />
+        <EditText
+            android:id="@+id/edit_max_marker_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number" />
+        <TextView
+            android:id="@+id/tv_max_marker_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/max_number_of_markers" />
     </GridLayout>
 </GridLayout>
