--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#494B49</color>
+    <color name="colorPrimaryDark">#5F635F</color>
+    <color name="colorAccent">#2a52be</color>
     <color name="Break">#FFF407</color>
     <color name="Mischief">#DCAF40</color>
     <color name="Offense">#0707FF</color>
