--- a/app/src/main/res/layout/bottom_sheet_crime_list_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_crime_list_layout.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
+            android:textColor="#FFFFFF"
             android:text="@string/crime_type"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textSize="12sp" />
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
+            android:textColor="#FFFFFF"
             android:text="@string/crime_time"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textSize="12sp" />
