--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,60 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<fragment
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_settings"
+    android:name="com.example.crimehelp.SettingsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SettingsActivity"
-    android:rowCount="10"
-    android:id="@+id/settings_page"
-    android:layout_margin="20dp"
-    android:columnCount="1">
-
-    <TextView
-        android:id="@+id/tv_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="@string/Settings" />
-
-    <CheckBox
-        android:id="@+id/cb_sound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="1"
-        android:text="@string/sound_alert" />
-    <CheckBox
-        android:id="@+id/cb_vibrate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="1"
-        android:text="@string/vibration_alert" />
-    <GridLayout
-        android:columnCount="2"
-        android:layout_marginTop="20dp">
-        <Spinner
-            android:id="@+id/edit_max_radius"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:entries="@array/radii"
-            android:inputType="number" />
-        <TextView
-            android:id="@+id/tv_radius"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/alert_in_km" />
-        <Spinner
-            android:id="@+id/edit_max_marker_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:entries="@array/max_counts"
-            android:inputType="number" />
-        <TextView
-            android:id="@+id/tv_max_marker_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/max_number_of_markers" />
-    </GridLayout>
-</GridLayout>
+    android:layout_height="match_parent"/>
