--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,43 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/switchBreakandEnter"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/breakswitch"
+        app:showAsAction="ifRoom"
         android:title="@string/break_and_enter"
         >
     </item>
     <item
         android:id="@+id/switchMischief"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/mischiefswitch"
+        app:showAsAction="ifRoom"
         android:title="@string/mischief">
     </item>
     <item
         android:id="@+id/switchOffense"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/offenseswitch"
+        app:showAsAction="ifRoom"
         android:title="@string/offense_against_a_person">
     </item>
     <item
         android:id="@+id/switchOtherTheft"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/othertheftswitch"
+        app:showAsAction="ifRoom"
         android:title="@string/other_theft">
     </item>
     <item
         android:id="@+id/switchTheftFromVehicle"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/theftfromvehicleswitch"
+        app:showAsAction="ifRoom"
         android:title="@string/theft_from_vehicle">
     </item>
     <item
         android:id="@+id/switchTheftOfBicycle"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/theftofbicycleswitch"
+        app:showAsAction="ifRoom"
         android:title= "@string/theft_of_bicycle">
     </item>
     <item
         android:id="@+id/switchTheftOfVehicle"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/theftofvehicleswitch"
+        app:showAsAction="ifRoom"
         android:title= "@string/theft_of_vehicle">
     </item>
     <item
         android:id="@+id/switchVehicleCollision"
-        app:actionViewClass = "android.widget.Switch"
+        app:actionLayout="@layout/vehiclecollisionswitch"
+        app:showAsAction="ifRoom"
         android:title= "@string/vehicle_collision">
     </item>
     <item
