Add all icons. Fix infowindow and layout list to show icons of crime events

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="TheftOfVehicle">#FFA07A</color>
     <color name="TheftOfBicycle">#E9967A</color>
     <color name="VehicleCollision">#3D4849</color>
+    <color name="AppWhite">#FFFFFF</color>
 </resources>
