--- a/app/src/main/res/layout/bottom_sheet_search.xml
+++ b/app/src/main/res/layout/bottom_sheet_search.xml
@@ -27,7 +27,8 @@
             android:orientation="vertical">
 
             <SearchView
-                android:searchIcon="@drawable/magnifyingreal"
+                android:searchIcon="@drawable/whitesearch"
+
                 android:id="@+id/sv_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -37,7 +38,7 @@
             <ListView
                 android:id="@+id/search_list"
                 android:layout_width="match_parent"
-                android:divider="#FFFFFF"
+                android:divider="@color/AppWhite"
                 android:dividerHeight="2px"
                 android:layout_height="wrap_content" />
 
