--- a/app/src/main/res/layout/crime_event_window_layout.xml
+++ b/app/src/main/res/layout/crime_event_window_layout.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="30dp"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:minWidth="600dp"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/crimeTypeWindow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/crime_type" />
-        <TextView
-            android:id="@+id/hundredBlockWindow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hundred_block" />
+            <ImageView
+                android:id="@+id/infoWindowCrimeImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:layout_marginLeft="0dp" />
+
+            <TextView
+                android:id="@+id/crimeTypeWindow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/crime_type" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/neighbourhoodWindow"
@@ -29,9 +41,16 @@
             android:text="@string/neighbourhood" />
 
         <TextView
+            android:id="@+id/hundredBlockWindow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/hundred_block" />
+
+        <TextView
             android:id="@+id/dateWindow"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:text="@string/date" />
 
