--- a/app/src/main/res/layout/crime_event_window_layout.xml
+++ b/app/src/main/res/layout/crime_event_window_layout.xml
@@ -30,7 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/crime_type" />
+                android:text="@string/crime_type"
+                android:textColor="@color/colorPrimaryDark"/>
 
         </LinearLayout>
 
@@ -38,13 +39,15 @@
             android:id="@+id/neighbourhoodWindow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/neighbourhood" />
+            android:text="@string/neighbourhood"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/hundredBlockWindow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hundred_block" />
+            android:text="@string/hundred_block"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/dateWindow"
@@ -52,7 +55,8 @@
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:text="@string/date" />
+            android:text="@string/date"
+            android:textColor="@color/colorPrimaryDark"/>
 
 
     </LinearLayout>
